# devops-study-app

./: .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml  release-please-config.json  testing.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: .release.yaml.swp  backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml
kubernetes/: pyproject.toml
scripts/: setup
src/backend/: .coverage  CHANGELOG.md  coverage.xml  pyproject.toml
src/backend/src/backend/: __init__.py  main.py
src/frontend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/frontend/src/frontend/: main.py
src/frontend/tests/: conftest
