[project]
name = "frontend"
version = "0.1.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [
    { name = "hwaris347", email = "hwaris347@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flash>=1.0.3",
    "flask>=3.1.2",
    "pytest>=9.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.4",
]

[project.scripts]
frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]


[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
    "ruff>=0.14.4",
]
